k8s/overlays/dev/api-gateway-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: api-gateway
          image: pricingplatform/api-gateway:dev
          imagePullPolicy: Never
