k8s/overlays/dev/rule-api-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rule-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: rule-api
          image: pricingplatform/rule-api:dev
          imagePullPolicy: Never
